--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: ''
+                liffId: '2007308906-aQvrEqVZ'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -1206,7 +1206,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbwCxnJaxGZ46c3TnnesuZcD_zuxuVoSHoDHo5MxkRzChcK5vZDwBs4HstzkXO-KLyuDYA/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbxvqOdIcrmI9Q86bHi8OLqRLQTWB5__5nLFp2naJ8hNg8lFZwFt-y_wjT6ngfsJ0eM7Qg/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
