--- a/index.html
+++ b/index.html
@@ -310,10 +310,9 @@
 
         .week-button {
             padding: 10px 20px;
-            background-color: #ffffff;
-            color: #222222;
-            border: 1px solid black;
-            /* ← 外枠を黒1pxに設定 */
+            background-color: #444444;
+            color: #fff;
+            border: none;
             border-radius: 4px;
             cursor: pointer;
             transition: background-color 0.3s ease, transform 0.2s ease;
@@ -321,7 +320,7 @@
         }
 
         .week-button:hover {
-            background-color: #ffffff;
+            background-color: #444444;
             transform: scale(1.15);
             /* ドーン！ってくらい拡大🔥 */
         }
@@ -341,18 +340,15 @@
 
         .month-button {
             padding: 10px 20px;
-            background-color: #ffffff;
-            color: #222222;
-            border: 1px solid black;
-            /* ← 外枠を黒1pxに設定 */
+            background-color: #444;
+            color: #fff;
+            border: none;
             border-radius: 4px;
             cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            transform-origin: center center;
         }
 
         .month-button:hover {
-            background-color: #ffffff;
+            background-color: #444444;
             transform: scale(1.15);
             /* ドーン！ってくらい拡大🔥 */
         }
