--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             /* さらに右へ */
             top: 80%;
             /* 画面中央に固定 */
-            transform: translateY(-50%) translateX(20px);
+            transform: translateY(-50%) translateX(16px);
             /* 中央配置と右ずらし */
             background: #13ca5e;
             display: flex;
@@ -96,7 +96,7 @@
             background-color: #fdfdfd;
             border-radius: 12px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            width: 90%;
+            width: 96%;
             max-width: 500px;
             padding: 25px;
             box-sizing: border-box;
@@ -629,6 +629,8 @@
             padding: 15px;
             font-size: 18px;
             background-color: #877059;
+            margin-top: 12px;
+            /* ← ここで下方向にずらす */
         }
 
         .submit-button:hover {
@@ -760,6 +762,7 @@
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます<br>※ブレインセラピーは日曜日限定です。</div>
         <div class="symptoms">
+            <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">整体日本一コース</button>
             <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">スタンダードメニュー</button>
             <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">ブレインセラピー（日曜日限定）</button>
             <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">ラフォスストレッチ（20分）</button>
@@ -869,6 +872,7 @@
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
+            '整体日本一コース': 20,
             'スタンダードメニュー': 40,
             'ブレインセラピー（日曜日限定）': 40,
             'ラフォスストレッチ（20分）': 20,
