--- a/index.html
+++ b/index.html
@@ -763,12 +763,13 @@
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます<br>※ブレインセラピーは日曜日限定です。</div>
         <div class="symptoms">
             <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">スタンダードメニュー</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="0">ブレインセラピー（日曜日限定）</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="0">ブレインセラピー＋運動療法（30分）</button>
             <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">ラフォスストレッチ（20分）</button>
             <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">ラフォスストレッチ（60分）</button>
             <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="0">筋膜リリース&EMS（20分）</button>
             <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="0">インソール作成（30分〜40分）</button>
             <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="0">インソール作成のみ（30分〜40分）</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="0">一撃必殺治療（60分）</button>
         </div>
         <div class="highlight-background">
             <span class="highlight-text">オプション</span>
@@ -877,6 +878,8 @@
             'インソール作成のみ（30分〜40分）': 40,
             'スタンダードメニュー': 40,
             'ブレインセラピー（日曜日限定）': 40,
+            'ブレインセラピー＋運動療法（30分）': 40,
+            '一撃必殺治療（60分）': 60,
             'ラフォスストレッチ（20分）': 20,
             'ラフォスストレッチ（40分）': 40,
             'ラフォスストレッチ（60分）': 60,
