Update info-text for treatment menu
Removed information about brain therapy being Sunday only.

--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
         <div id="treatment-text" style="display: none; margin-bottom: 10px;"></div>
 
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
-        <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます<br>※ブレインセラピーは日曜日限定です。</div>
+        <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
         <div class="symptoms">
             <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">スタンダードメニュー</button>
             <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="0">ブレインセラピー＋運動療法（30分）</button>
